2011-01-14  Francois Suter  <francois.suter@typo3.org>

	* Fixed bug #16848: CSH in FlexForms does not work anymore

2011-01-14  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16996: CSH tooltip shows for too long time (Thanks to Christian Mueller)

2011-01-14  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17036: Misleading deprecation comment getReferenceHTML()
	* Fixed bug #17034: Live search also returns records which not available to the user (Thanks to Peter Beernink)
	* Follow-up to #17032: Remove early return

2011-01-14  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17032: Backend search throws Exceptions / SQL errors when running as non-admin

2011-01-14  Patrick Broens  <patrick@patrickbroens.nl>

	* Fixed issue #16698: sys_history: optimize indexes (Thanks to Juergen Deisenroth and Christian Kuhn)

2011-01-13  Steffen Kamper  <steffen@typo3.org>

	* Fixed issue #16919: Catalan flag is replaced by Canadian flag (Thanks to Alexandre Gravel-Raymond)

2011-01-13  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #17012: [reports] Use javascript goToModule() function in the warning message

2011-01-13  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17006: Language mode is broken as soon as a backend layout is selected for the current page (Thanks to Jo Hasenau)

2011-01-13  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #16991: Fatal Error when calling List when "perm" sysext is not installed (Thanks to Georg Ringer)

2011-01-13  Ernesto Baschny  <ernesto.baschny@typo3.org>

	* Release of TYPO3 4.5.0beta4

2011-01-12  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #16988: Update Context Sensitive Help for pages and tt_content to match new labels
	* Fixed bug #16989: Update page and tt_content labels to use title case

2011-01-12  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed issue #16806: pages_language_overlay does not fit new page layout
	* Follow-up to #16986: Grid wizard miss tooltips and localization
