@@ -1,3 +1,7 @@
+2011-01-14  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Fixed bug #17035: Positioning and JS behaviour of the icon to clear input fields are suboptimal (Thanks to Jo Hasenau)
+
 2011-01-14  Francois Suter  <francois.suter@typo3.org>
 
 	* Fixed bug #16848: CSH in FlexForms does not work anymore
